[FIX] mail: improve discuss message bubble roundness + tail
[FIX] mail: make discuss message bubble rounder

Before this commit, the roundness of message bubble was 6px.
Messaging app competitors have rounded bubble, around 7.5px,
which looks better than Odoo discuss.

This commit increases the roundness of discuss bubble to 7.5px,
thanks to new `.o-rounded-bubble` classnames.

[FIX] mail: add tail tip on non-squashed bubble

Before this commit, the tail tip was simulated in a rudimentary
way using non-rounded corner at the place of tail tip.

This commit adds a dedicated tail element so this looks best,
especially with message bubble now being rounder.

Note that the message border has been adjusted to not make use
of opacity, because the opacity color on tail looks different
and also doesn't overlap well. Another benefit of this adjusted
color is to have better contrast in message bubble with card
layout like in mailboxes.

X-original-commit: 0a9ae0af4d70a630e16800a502d7d2c0a7b6b4e4

--- a/addons/mail/static/src/core/common/message.dark.scss
+++ b/addons/mail/static/src/core/common/message.dark.scss
@@ -14,7 +14,7 @@
 .o-mail-Message-bubble {
     &.o-blue {
         background-color: mix($gray-100, $info, 87.5%) !important;
-        border-color: rgba(lighten(mix($gray-100, $info, 87.5%), 2.5%), .5) !important;
+        border-color: mix(lighten(mix($gray-100, $info, 87.5%), 2.5%), black) !important;
     
         &.o-muted {
             background-color: darken(mix($gray-100, $info, 87.5%), 5%) !important;
@@ -22,7 +22,7 @@
     }
     &.o-green {
         background-color: mix($gray-100, $success, 87.5%) !important;
-        border-color: rgba(lighten(mix($gray-100, $success, 87.5%), 2.5%), .5) !important;
+        border-color: mix(lighten(mix($gray-100, $success, 87.5%), 2.5%), black) !important;
     
         &.o-muted {
             background-color: darken(mix($gray-100, $success, 87.5%), 5%) !important;
@@ -30,10 +30,37 @@
     }
     &.o-orange {
         background-color: mix($gray-100, $warning, 72.5%) !important;
-        border-color: rgba(lighten(mix($gray-100, $warning, 72.5%), 2.5%), .5) !important;
+        border-color: mix(lighten(mix($gray-100, $warning, 72.5%), 2.5%), black) !important;
     
         &.o-muted {
             background-color: darken(mix($gray-100, $warning, 72.5%), 10%) !important;
+        }
+    }
+}
+
+.o-mail-Message-bubbleTail {
+     &.o-blue {
+        .o-mail-Message-bubbleTailBg {
+            color:mix($gray-100, $info, 87.5%) !important;
+        }
+        .o-mail-Message-bubbleTailBorder {
+            color: mix(lighten(mix($gray-100, $info, 87.5%), 2.5%), black) !important;
+        }
+    }
+    &.o-green {
+        .o-mail-Message-bubbleTailBg {
+            color: mix($gray-100, $success, 87.5%) !important;
+        }
+        .o-mail-Message-bubbleTailBorder {
+            color: mix(lighten(mix($gray-100, $success, 87.5%), 2.5%), black) !important;
+        }
+    }
+    &.o-orange {
+        .o-mail-Message-bubbleTailBg {
+            color: mix($gray-100, $warning, 72.5%) !important;
+        }
+        .o-mail-Message-bubbleTailBorder {
+            color: mix(lighten(mix($gray-100, $warning, 72.5%), 2.5%), black) !important;
         }
     }
 }
